.menu__sub-list{                             z-index: 1;

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <li class="sub-list__li-tag">
                               <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                               <ul class="menu__sub-list__down">
-                                <li><a href="pages/subpages/3D Swiper-Slider(CSSLESS).html" data-goto=".page__section1" class="menu__sub-link">3D Swiper-Slider(CSSLESS)</a></li>
+                                <li><a href="pages/subpages/3D Swiper-Slider(CSSLESS).html" data-goto=".page__section1" class="menu__sub-link">3D Swiper-Slider (CSS/LESS)</a></li>
                                 <li><a href="pages/subpages/grid layout.html" data-goto=".page__section1" class="menu__sub-link">grid layout</a></li>
                                 <li><a href="pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
                                 <li><a href="pages/subpages/Flying SVG Animation.html" data-goto=".page__section1" class="menu__sub-link">Flying SVG Animation</a></li>
