footer accordion is done v. 1.0.0  svg-icon +- done

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="footer__container">
         
          <div class="column__footer-one">
-            <h4 class="column__footer-one-title">Column-one</h4>
+            <h4 class="column__footer-one-title svg-icon">Column-one</h4>
             <div class="column__footer-one-elements column">
               <a class="column__footer-one-a">Some Link</a>
               <a class="column__footer-one-a">Some Link</a>
@@ -256,8 +256,8 @@
               <a class="column__footer-one-a">Some Link</a>
             </div>
           </div>
-          <div class="column__footer-five">
-            <h4 class="column__footer-five-title">Column-five</h4>
+          <div class="column__footer-five ">
+            <h4 class="column__footer-five-title svg-icon">Column-five</h4>
             <div class="column__footer-five-elements column">
               <a class="column__footer-five-a">Some Link</a>
               <a class="column__footer-five-a">Some Link</a>
@@ -273,7 +273,7 @@
             </div>
           </div>
           <div class="column__footer-four">
-            <h4 class="column__footer-four-title">Column-four</h4>
+            <h4 class="column__footer-four-title svg-icon">Column-four</h4>
             <div class="column__footer-four-elements column">
               <a class="column__footer-four-a">Some Link</a>
               <a class="column__footer-four-a">Some Link</a>
@@ -286,7 +286,7 @@
             </div>
           </div>
           <div class="column__footer-two">
-            <h4 class="column__footer-two-title">Column-two</h4>
+            <h4 class="column__footer-two-title svg-icon">Column-two</h4>
             <div class="column__footer-two-elements column">
               <a class="column__footer-two-a">Some Link</a>
               <a class="column__footer-two-a">Some Link</a>
@@ -294,7 +294,7 @@
             </div>
           </div>
           <div class="column__footer-three">
-            <h4 class="column__footer-three-title">Column-three</h4>
+            <h4 class="column__footer-three-title svg-icon">Column-three</h4>
             <div class="column__footer-three-elements column">
               <a class="column__footer-three-a">Some Link</a>
               <a class="column__footer-three-a">Some Link</a>
