--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="swiper-slider/swiper-bundle.min.css">  
+    <link rel="stylesheet" href="swiper-slider/swiper-bundle.min.css"> 
+     
   </head>
 
 
@@ -71,7 +72,7 @@
                             <li class="sub-list__li-tag">
                               <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                               <ul class="menu__sub-list__down">
-                                <li><a href="pages/subpages/3D Swiper-Slider(CSSLESS).html" data-goto=".page__section1" class="menu__sub-link">3D Swiper-Slider (CSS/LESS)</a></li>
+                                <li><a href="pages/subpages/3D Swiper Slider.html" data-goto=".page__section1" class="menu__sub-link">3D Swiper Slider</a></li>
                                 <li><a href="pages/subpages/grid layout.html" data-goto=".page__section1" class="menu__sub-link">grid layout</a></li>
                                 <li><a href="pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
                                 <li><a href="pages/subpages/Flying SVG Animation.html" data-goto=".page__section1" class="menu__sub-link">Flying SVG Animation</a></li>
