some pages correction

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                               <li class="sub-list__li-tag">
                                   <a data-goto=".page__section1" href="" class="menu__sub-link__title">GENERAL ELEMENTS</a>
                                   <ul class="menu__sub-list__down">
-                                    <li><a href="" data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                    <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                    <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                    <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                    <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
-                                    <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
+                                    <li><a href="pages/subpages/3D Swiper Slider.html" data-goto=".page__section1" class="menu__sub-link">3D Swiper Slider</a></li>
+                                    <li><a href="pages/subpages/grid layout.html" data-goto=".page__section1" class="menu__sub-link">grid layout</a></li>
+                                    <li><a href="pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
+                                    <li><a href="pages/subpages/Flying SVG Animation.html" data-goto=".page__section1" class="menu__sub-link">Flying SVG Animation</a></li>
+                                    <li><a href="pages/subpages/Accordion footer.html" data-goto=".page__section1" class="menu__sub-link">Accordion footer</a></li>
+                                    <li><a href="pages/subpages/Load More Button.html" data-goto=".page__section1" class="menu__sub-link">Load More Button</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
                                   </ul>
