--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <nav class="menu__body">
                     <ul class="menu__list">
                         <li><a data-goto=".page__section1" href="index.html"  class="menu__link">HOME</a></li>
-                        <li><a data-goto=".page__section2" href="pages/pages.html"  class="menu__link">SHOP</a></li>
-                        <li><a data-goto=".page__section3" href="pages/portfolio.html"  class="menu__link">PORTFOLIO</a></li>
+                        <li><a data-goto=".page__section2" href=""  class="menu__link">SHOP</a></li>
+                        <li><a data-goto=".page__section3" href=""  class="menu__link">PORTFOLIO</a></li>
                         <li>
-                           <a data-goto=".page__section4" style="color: #92003B; font-weight: 600;" style="font-weight: 600" href="pages/elements.html" class="menu__link">MY SKILLS</a>
+                           <a data-goto=".page__section4" style="color: #92003B; font-weight: 600;" style="font-weight: 600" href="" class="menu__link">MY SKILLS</a>
                            <span class="menu__arrow"></span>
                            <span class="menu__arrowfalse"></span>
                            <div class="mega-menu_section">
@@ -100,9 +100,9 @@
                            </div>
                         </li> 
                         
-                        <li><a data-goto=".page__section1" href="pages/blog.html"  class="menu__link">BLOG</a></li>
+                        <li><a data-goto=".page__section1" href=""  class="menu__link">BLOG</a></li>
                         
-                        <li><a data-goto=".page__section3" href="pages/features.html"  class="menu__link">FEATURES</a></li>
+                        <li><a data-goto=".page__section3" href=""  class="menu__link">FEATURES</a></li>
                     </ul>
                 </nav>        
             </div>
