intersection observer+load more button v.2.0

--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
             Reveal Elements On Scroll JavaScript Intersection Observer +<br>
             Load More Button
           </h1>
-            
-              <div class="loading-lazy__ul">
+          <div class="loading-lazy__ul">
 
                 <div class="loading-lazy-hide">
                   <div id="container" class="loading-lazy__li one ">
@@ -180,9 +179,61 @@
                   </div >
                 </div>
 
-              </div >
-            
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li seven ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
 
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li eight ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li nine ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li ten  ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li eleven  ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li twelve ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li thirteen  ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li fourteen  ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+                <div class="loading-lazy-hide">
+                  <div id="container" class="loading-lazy__li fifteen ">
+                    <a href="https://themepixel.github.io/Portfolio_HTML/"><img class="imglazy" data-src="img/soon.png" src="img/1x1.png" alt="some-image"></a>
+                  </div >
+                </div>
+
+          </div >
           <div id="load__more-button">Load more</div>
         </div>
       </div>
