--- a/pages/subpages/Tabs.html
+++ b/pages/subpages/Tabs.html
@@ -48,7 +48,7 @@
                                   <ul class="menu__sub-list__down">
                                     <li><a href="../../pages/subpages/3D Swiper Slider.html" data-goto=".page__section1" class="menu__sub-link">3D Swiper Slider</a></li>
                                     <li><a href="../../pages/subpages/Load More Button.html" data-goto=".page__section1" class="menu__sub-link">Load More Button</a></li>
-                                    <li><a href="../../pages/subpages/Tab.html" data-goto=".page__section1" class="menu__sub-link">Tab</a></li>
+                                    <li><a href="../../pages/subpages/Tabs.html" data-goto=".page__section1" class="menu__sub-link">Tabs</a></li>
                                     <li><a href="../../pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
                                     <li><a href="../../pages/subpages/Accordion footer.html" data-goto=".page__section1" class="menu__sub-link">Accordion footer</a></li>
                                     <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
@@ -74,7 +74,7 @@
                               <ul class="menu__sub-list__down">
                                 <li><a href="../../pages/subpages/3D Swiper Slider.html" data-goto=".page__section1" class="menu__sub-link">3D Swiper Slider</a></li>
                                 <li><a href="../../pages/subpages/Load More Button.html" data-goto=".page__section1" class="menu__sub-link">Load More Button</a></li>
-                                <li><a href="../../pages/subpages/Tab.html" data-goto=".page__section1" class="menu__sub-link">Tab</a></li>
+                                <li><a href="../../pages/subpages/Tabs.html" data-goto=".page__section1" class="menu__sub-link">Tabs</a></li>
                                 <li><a href="../../pages/subpages/SVG Icon Animation.html" data-goto=".page__section1" class="menu__sub-link">SVG Icon Animation</a></li>
                                 <li><a href="../../pages/subpages/Accordion footer.html" data-goto=".page__section1" class="menu__sub-link">Accordion footer</a></li>
                                 <li><a data-goto=".page__section1" href="" class="menu__sub-link">Page 1</a></li>
