--- a/pages/subpages/Tabs.html
+++ b/pages/subpages/Tabs.html
@@ -124,19 +124,19 @@
             </li>
             <li class="tabs_section-li" data-content="planning">
               <img src="../../img/tabs/2.svg" alt="2">
-              <span>Research</span>
+              <span>Planning</span>
             </li>
             <li class="tabs_section-li" data-content="production">
               <img src="../../img/tabs/3.svg" alt="3">
-              <span>Research</span>
+              <span>Production</span>
             </li>
             <li class="tabs_section-li" data-content="testing">
               <img src="../../img/tabs/4.svg" alt="4">
-              <span>Research</span>
+              <span>Testing</span>
             </li>
             <li class="tabs_section-li" data-content="result">
               <img src="../../img/tabs/5.svg" alt="5">
-              <span>Research</span>
+              <span>Result</span>
             </li>
           </ul>
           <div class="tabs_section_buttom-content">
