double slider start v.2.0.0. start

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li><a data-goto=".page__section2" href=""  class="menu__link">SHOP</a></li>
               <li><a data-goto=".page__section3" href=""  class="menu__link">PORTFOLIO</a></li>
               <li>
-                 <a data-goto=".page__section4" style="color: #92003B; font-weight: 600;" style="font-weight: 600" href="" class="menu__link">MY SKILLS</a>
+                 <a data-goto=".page__section4" style="color: #92003B; font-weight: 600;" style="font-weight: 600" href="" class="menu__link">MENU</a>
                  <span class="menu__arrow"></span>
                  <span class="menu__arrowfalse"></span>
                  <div class="mega-menu_section">
